cleaned Properties and the other classes. changed setButton on Click logic. Location moved from Properties to ApplicationController. No private finale previewWindows/Applicationcontroll variable in properties